--- a/Урок 5/lesson5/main.html
+++ b/Урок 5/lesson5/main.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"></script>
+    <script src="build.js"></script>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
